--- a/indext.html
+++ b/indext.html
@@ -27,6 +27,9 @@
           JAMB FORM
         </label>
       </div>
+
+
+      <p>kjgjkkjgkjgkjgkjgkjg</p>
 </body>
 <script src="js/bootstrap.min.js"></script>
 </html>
